# mwemu

./: AFOSBUILD.sh  BENCHMARK.md  Cargo.toml  Makefile  README.md
andraxbin/: mwemu
docs/: TODO.md
libmwemu/: Cargo.toml  README.md
libmwemu/src/: banzai.rs  breakpoint.rs  config.rs  console.rs  constants.rs  elf32.rs  elf64.rs  emu.rs  exception.rs  exception_type.rs  flags.rs  fpu.rs  hooks.rs  kuser_shared.rs  lib.rs  macros.rs  ntapi32.rs  pe32.rs  pe64.rs  peb32.rs  peb64.rs  regs64.rs  script.rs  serialization.rs  structures.rs  syscall32.rs  syscall64.rs  tests.rs
libmwemu/src/engine/: logic.rs  mod.rs
libmwemu/src/fpu/: f80.rs  fpu_stack.rs
libmwemu/src/maps/: mem64.rs  mod.rs  tlb.rs
libmwemu/src/winapi32/: advapi32.rs  crypt32.rs  dnsapi.rs  iphlpapi.rs  kernel32.rs  kernelbase.rs  libgcc.rs  mod.rs  mscoree.rs  msvcrt.rs  ntdll.rs  oleaut32.rs  shlwapi.rs  user32.rs  wincrt.rs  wininet.rs  ws2_32.rs
libmwemu/src/winapi64/: advapi32.rs  comctl32.rs  comctl64.rs  gdi32.rs  kernel32.rs  kernelbase.rs  mod.rs  msvcrt.rs  ntdll.rs  ole32.rs  oleaut32.rs  shell32.rs  shlwapi.rs  user32.rs  uxtheme.rs  wincrt.rs  winhttp.rs  wininet.rs  ws2_32.rs
mwemu/: Cargo.toml  README.md
mwemu/src/: main.rs
pymwemu/: Cargo.toml  DOCUMENTATION.md  Makefile  TESTING.md  __init__.py  pyproject.toml  run_tests.py  test_all.sh
pymwemu/src/: lib.rs
pymwemu/tests/: README.md  __init__.py  conftest.py  test_advanced_features.py  test_basic_functionality.py  test_binary_loading.py  test_execution_engine.py  test_runner.py  test_simple.py
scripts/: diff-trace.py  enigma-protector.sh  enigma-protector2.sh  ghidra_mwemu.py  trace-converter.py
