[package]
name = "libmwemu"
version = "0.21.3"
edition = "2018"
authors = ["sha0coder"]
license = "MIT"
rust-version = "1.80.1"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."
#email = "sha0 at badchecksum.net"
documentation = "https://docs.rs/libmwemu"
repository = "https://github.com/sha0coder/mwemu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = { version = "1.21.0", features = ["serde"] }
uint = "0.9.5"
md5 = "0.7.0"
lazy_static = "1.4.0"
rand = "0.9.1"
ctrlc = "3.2.2"
scan_fmt = "0.2.6"
atty = "0.2.14"
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
bitcode = { version = "0.6.3", features = ["std", "serde"] }
ahash = { version = "0.8.12", features = ["serde"] }
bitfield = "0.19.1"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
zip = "0.6"
serde_arrays = "0.2.0"
slab = { version = "0.4.10", features=["serde"]}

[dev-dependencies]
env_logger = "0.11.8"

[features]
log_mem = []
