[package]
name = "mwemu"
version = "0.7.11"
authors = ["sha0coder"]
edition = "2018"
rust-version = "1.80.1"
license = "MIT"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."
documentation = "https://docs.rs/libmwemu"
repository = "https://github.com/sha0coder/mwemu"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.22"
env_logger = "0.11.6"
libmwemu = { path = "../libmwemu" }
#libmwemu = "0.21.0"
